# KiraraProject

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: ClangToolchain.cmake  EnableMoldLinker.cmake  EnableNative.cmake  GetCPM.cmake  KRR_AddModule.cmake  KRR_AddTest.cmake  KRR_EnableClangTidy.cmake  KRR_Message.cmake  SetupDeps.cmake  SetupSlang.cmake  kiraConfig.cmake.in
cmake/patches/: libigl.patch  tomlplusplus.patch
docs/: design.md
examples/find_package/: CMakeLists.txt  main.cpp
examples/subdirectory/: CMakeLists.txt
kira/: CMakeLists.txt  README.md
kira/Core/: CMakeLists.txt
kira/Core/include/kira/: .gitignore  Anyhow.h  Assertions.h  CommitHash.h.in  Compiler.h  Core.h  FileResolver.h  KIRA.h  Logger.h  Macros.h  Properties.h  Properties2.h  Reflection.h  SmallVector.h  Types.h  Utils.h  Version.h.in
kira/Core/include/kira/detail/: Logger.h  PropertiesImpl.h  PropertiesMixin.h  PropertiesMixins.h
kira/Core/src/: Core.cpp  FileResolver.cpp  KIRA.cpp  Logger.cpp  Properties.cpp  SmallVector.cpp
kira/Core/tests/: AnyhowTests.cpp  AssertionTests.cpp  CMakeLists.txt  LoggerTests.cpp  LoggerThreadSafeTests.cpp  PropertiesTests.cpp  ReflectionTests.cpp
kira/GTestMain/: CMakeLists.txt
kira/Geometry/: CMakeLists.txt
kira/KUDA/: README.md
kira/Vecteur/: CMakeLists.txt  README.md
kira/Vecteur/include/kira/: Vecteur.h  VecteurBase.h  VecteurGeneric.h  VecteurHighway.h  VecteurLazy.h  VecteurLazyOp.h  VecteurOptimizer.h  VecteurRouter.h  VecteurStorage.h  VecteurTraits.h
kira/Vecteur/include/kira/Vecteur/: Base.h  Generic.h  Highway.h  Lazy.h  Optimizer.h  Router.h  Storage.h  Traits.h
kira/Vecteur/include/kira/Vecteur/detail/: Lazy.h  ReductionMixin.h
kira/Vecteur/include/kira/detail/: VecteurLazyArith.h  VecteurReductionArith.h  VecteurUtils.h
kira/Vecteur/src/: Vecteur.cpp
kira/Vecteur/tests/: ArithLib.h  BinaryCheck.cpp  CMakeLists.txt  ComptimeTests.cpp  DynamicTests.cpp  EigenPlayground.cpp  StaticTests.cpp  VecteurBinaryCheck.cpp  VecteurCompTests.cpp  VecteurComptimeTests.cpp  VecteurDynamicLazyTests.cpp  VecteurDynamicTests.cpp  VecteurEigenPlayground.cpp  VecteurGenericTests.cpp  VecteurLazyTests.cpp  VecteurStaticTests.cpp  VecteurTests.h
kirara-dance/: CMakeLists.txt  README.md
kirara-dance/Core/: Buffer.h  DeviceUtils.cpp  DeviceUtils.h  GLFW.h  KIRA.h  Math.h  Object.h  Program.h  ProgramBuilder.cpp  ProgramBuilder.h  Serialization.h  ShaderCursor.cpp  ShaderCursor.h  SingletonMixin.h  SlangContext.cpp  SlangContext.h  SlangUtils.h  Window.cpp  Window.h
kirara-dance/Core/detail/: Linalg.h
kirara-dance/FLux/: FLuxScene.h  RenderCamera.cpp  RenderCamera.h  RenderObject.cpp  RenderObject.h  RenderTriangleMesh.cpp  RenderTriangleMesh.h  SlangGraphicsContext.cpp  VFMain.slang
kirara-dance/FacadeRender/: README.md  SlangGraphicsContext.cpp  SlangGraphicsContext.h  TriMeshResource.cpp  TriMeshResource.h  TriangleMeshResource.cpp  TriangleMeshResource.h  VFMain.slang
kirara-dance/FacadeRender/Visitors/: EXTDebugSkeleton.h  EXTDrawCommand.h  ExtractDbgSkeleton.h  ExtractDebugSkeleton.h  ExtractDrawCommand.h  ISTTriangleMeshResource.h  InsertTriMeshResource.h  IssueDrawCommand.h  PopulateResource.h
kirara-dance/ImmediateRender/: ExtractDbgSkeleton.h  ImmediateRenderRoot.h  IssueDrawCommand.h  PopulateResource.h  README.md  SKMain.slang  SlangGraphicsContext.cpp  SlangGraphicsContext.h  TriangleMeshResource.cpp  TriangleMeshResource.h  VFMain.slang
kirara-dance/Instant/: InstantCamera.cpp  InstantCamera.h  InstantObject.cpp  InstantObject.h  InstantScene.cpp  InstantScene.h  InstantTriangleMesh.cpp  InstantTriangleMesh.h  README.md  SlangGraphicsContext.cpp  SlangGraphicsContext.h  VFMain.slang
kirara-dance/KiraraDance/: Editor.cpp  Editor.h  KiraraDance.cpp  KiraraDance.h  KiraraDance2.cpp  null.slang
kirara-dance/Renderer/: RenderObject.cpp  RenderObject.h  RenderScene.cpp  RenderScene.h  RenderTriangleMesh.cpp  RenderTriangleMesh.h  SlangGraphicsContext.cpp  SlangGraphicsContext.h  VFMain.slang  shaders.slang
kirara-dance/Scene/: AnimatableObject.cpp  AnimatableObject.h  Animation.cpp  Animation.h  Camera.cpp  Camera.h  Geometry.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SceneGraph.cpp  SceneGraph.h  SceneObject.cpp  SceneObject.h  SceneRoot.cpp  SceneRoot.h  StaticTriangleMesh.cpp  StaticTriangleMesh.h  Transform.cpp  Transform.h  TriangleMesh.cpp  TriangleMesh.h
kirara-dance/Scene/Visitors/: EXTNodeTransforms.h  EXTTreeHierarchy.h  EXTTreeInfo.h  ExtractNodeTransforms.h  ExtractRelativeTransforms.h  ExtractTreeHierarchy.h  ISTSkinnedMesh.h  InsertSkinnedMesh.h  SerializeGraph.h  TickAnimations.h  TreeInfo.h  ValidateTreeHierarchy.h
kirara-dance/Scene2/: Animation.cpp  Animation.h  ApplyAnimations.h  Camera.h  Geometry.cpp  Geometry.h  SceneBuilder.cpp  SceneBuilder.h  SceneRoot.h  TickAnimations.h  Transform.h  TreeChecker.h  TreeInfo.h  TriangleMesh.cpp  TriangleMesh.h
kirara-dance/Scene2/Visitors/: GeometryInfo.hpp  TreeInfo.hpp
kirara-dance/SceneGraph/: ExtractTypeOf.h  Group.cpp  Group.h  Node.cpp  Node.h  NodeMixin.h  NodeMixins.h  Serialization.cpp  Serialization.h  Visitors.cpp  Visitors.h
kirara-dance/SceneGraph/Visitors/: CopyOnWrite.h  ExtractTypeOf.h
kirara-dance/Shader/: shaders.slang
kirara-dance/UI/: Facade.cpp
kirara-dance/UnitTests/: AnimationTests.cpp
kirara-dance/_Scene/: Animation.h  Camera.cpp  Camera.h  SceneGraph.cpp  SceneGraph.h  SceneObject.h  TriangleMesh.cpp  TriangleMesh.h
kirara-dance/src/: main.cpp  main1.cpp  main2.cpp  shaders.slang  vulkan-api.cpp  vulkan-api.h
kirara-dance2/: CMakeLists.txt
kirara-dance2/Core/: KIRA.h  Math.h
kirara-dance2/IPC/: CCDPrimitives.cpp  CCDPrimitives.h
kirara-dance2/KiraraDance/: Backward.cpp  KiraraDance.cpp
kirara-dance2/Tests/Unit/: CCDTests.cpp  MathTests.cpp
kirara-flow/: CMakeLists.txt  README.md
kirara-flow/src/: flco.cpp
(+1 files in other folders)
